# plannit-timetracker

./: .env.example  .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile.dev  devcontainer.json
.devcontainer/hooks/: initialize.sh  post-create.sh  post-start.sh
.devcontainer/scripts/: devcontainer-entrypoint.sh
backend/: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml
backend/apps/accounts/: serializers.py  urls.py  views.py
backend/apps/common/: permissions.py  views.py
backend/apps/projects/: admin.py  colors.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/projects/management/commands/: seed_demo_data.py
backend/apps/projects/migrations/: 0001_initial.py  0002_alter_project_color_hex.py
backend/apps/reports/: serializers.py  services.py  urls.py  views.py
backend/apps/worklogs/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/worklogs/migrations/: 0001_initial.py  0002_remove_unique_worklog_entry_per_user_slot.py
backend/config/: asgi.py  env.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/scripts/: entrypoint.sh  start-dev.sh  start-prod.sh  wait-for-db.sh
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: start-dev.sh
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: use-auth.ts
scripts/: dev-down.sh  dev-up.sh
(+37 files in other folders)
